<resources>
    <string name="app_name">iTunes Search List</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">There was an error getting the data. Please check internet connection</string>
    <string name="retry">Retry</string>
    <string name="previously_visited_date">Last Updated on %s </string>
    <string name="no_description">No description</string>
    <string name="trackname">TrackName</string>
    <string name="description">Description</string>
    <string name="track_image">Track Image</string>
    <string name="genre">Genre</string>
    <string name="track_name">Track name</string>
    <string name="price">$%1$s</string>

</resources>
